--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Find your train!
+  h1 First things first, Find your train!
   p Locate your train, then board. Save trip and Happy New Year 2021
   #wrapper
     #trainList
