Added schedule to train

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
   p Locate your train, then board. Save trip and Happy New Year 2021
   #wrapper
     #trainList
-      h2 Trains
+      h2 Trains Schedule
       #trains.d-flex.flex-row
     #trainInfo
       strong  <span id='trainName'></span>
